# QT_template

./: CMakeLists.txt
src/: main.cpp  mainwindow.cpp  mainwindow.h
